[gd_scene load_steps=15 format=2]

[ext_resource path="res://guide/teacher.png" type="Texture" id=1]
[ext_resource path="res://pics/Speaker_ON.png" type="Texture" id=2]
[ext_resource path="res://pics/Speaker_MUTE.png" type="Texture" id=3]
[ext_resource path="res://pics/notebook.png" type="Texture" id=4]
[ext_resource path="res://pics/btn_prev.png" type="Texture" id=5]
[ext_resource path="res://pics/btn_next.png" type="Texture" id=6]
[ext_resource path="res://sound/mouse_click.mp3" type="AudioStream" id=7]
[ext_resource path="res://sences/tailieuhuongdan.gd" type="Script" id=8]
[ext_resource path="res://fonts/BeVietnamPro-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://fonts/BeVietnamPro-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 9 )

[sub_resource type="ImageTexture" id=1]

[sub_resource type="DynamicFont" id=2]
size = 21
extra_spacing_space = 1
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[node name="tailieuhuongdan" type="TextureRect"]
margin_left = 216.0
margin_top = 130.0
margin_right = 940.0
margin_bottom = 614.0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 38.0
margin_top = 34.0
margin_right = 298.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "TÀI LIỆU HƯỚNG DẪN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prev" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -63.0
margin_right = 69.0
margin_bottom = -16.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 655.0
margin_top = -63.0
margin_right = 713.0
margin_bottom = -16.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 97.0
margin_right = 320.0
margin_bottom = 347.0
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="."]
margin_left = 415.0
margin_top = 44.0
margin_right = 685.0
margin_bottom = 411.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Để tiến hành các test khác nhau nhằm định danh vi sinh vật, cần phân lập và làm thuần chủng vi sinh. Đặc biệt, các test sinh hóa hoặc giải trình tự dựa trên khuếch đại gen bằng các cặp mồi chung (universal primer) chỉ có hiệu lực (đúng) khi sử dụng chủng thuần. "
align = 3
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_p" type="Label" parent="."]
margin_left = 164.0
margin_top = 445.0
margin_right = 204.0
margin_bottom = 462.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_n" type="Label" parent="."]
margin_left = 525.0
margin_top = 445.0
margin_right = 565.0
margin_bottom = 462.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="voice" type="AudioStreamPlayer" parent="."]
volume_db = 10.0

[node name="intro_speaker" type="TextureButton" parent="."]
visible = false
margin_left = 13.0
margin_top = 18.0
margin_right = 525.0
margin_bottom = 530.0
rect_scale = Vector2( 0.07, 0.07 )
toggle_mode = true
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teacher" type="Sprite" parent="."]
position = Vector2( -84.411, 456.515 )
scale = Vector2( 0.597, 0.578 )
texture = ExtResource( 1 )

[connection signal="pressed" from="prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="intro_speaker" to="." method="_on_intro_speaker_pressed"]
